--- a/src/Component/PreviewPanel/previewpanel.module.css
+++ b/src/Component/PreviewPanel/previewpanel.module.css
@@ -1,5 +1,5 @@
 .panel_container {
-    background-color: #ccc;
+    background-color: #f7f7f7;
     height: 100%;
     overflow: auto;
     box-shadow: inset 5px 5px 10px rgb(0 0 0 / 10%);
