--- a/src/Component/Sidecolumn/sideColumn.module.css
+++ b/src/Component/Sidecolumn/sideColumn.module.css
@@ -33,6 +33,7 @@
     width: 40px;
     height: 30px;
     display: inline-block;
+    cursor: pointer;
 }
 
 .sidebar_optionbar_options li.active a {
