--- a/src/Component/PreviewPanel/AddLink/addLink.css
+++ b/src/Component/PreviewPanel/AddLink/addLink.css
@@ -109,6 +109,7 @@
     padding: 5px 10px;
     text-transform: capitalize;
     margin-bottom: 10px;
+    cursor: pointer;
 }
 
 .link_checkbox label {
