--- a/src/Component/PreviewPanel/EditSettings/backgroundSettings/backgroundSetting.css
+++ b/src/Component/PreviewPanel/EditSettings/backgroundSettings/backgroundSetting.css
@@ -92,7 +92,8 @@
     margin-left: 5px;
     outline: none;
     border: none;
-    padding: 5px 10px
+    padding: 5px 10px;
+    cursor: pointer;
 }
 
 input[type="color"]::-webkit-color-swatch-wrapper {
