--- a/src/Component/PreviewPanel/columnWidthSetting/columnWidthSetting.css
+++ b/src/Component/PreviewPanel/columnWidthSetting/columnWidthSetting.css
@@ -26,7 +26,7 @@
     align-items: center;
     justify-content: center;
 
-    color: # !important;
+    color: #ccc !important;
     background: #f7f7f7 !important;
     outline: 2px solid #ccc;
 }
