under dev: Added page change module

--- a/src/Component/Navbar/navbar.module.css
+++ b/src/Component/Navbar/navbar.module.css
@@ -103,6 +103,7 @@
     text-decoration: none;
     font-size: 13px;
     background-color: #fff;
+    cursor: pointer;
 }
 
 .navbar ul ul li:last-of-type a {
