--- a/src/Component/Navbar/navbar.css
+++ b/src/Component/Navbar/navbar.css
@@ -7,6 +7,7 @@
     top: 40px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, .2);
     display: none;
+    padding-top: 0px;
 }
 
 .subPagesList.show {
@@ -20,7 +21,7 @@
 
 }
 
-.subPagesList ul>li,
+.subPagesList ul li,
 .subPagesList ul>button {
     display: block;
     width: 100%;
@@ -31,6 +32,7 @@
 .subPagesList ul>hr {
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, .1);
+    margin-top: 0px;
 }
 
 .selectPage {
@@ -50,12 +52,11 @@
     margin-left: 10%;
 }
 
-.subPagesList ul>li {
+.subPagesList ul li {
     font-size: 12px;
-    padding: 5px 20px;
 }
 
-.subPagesList ul>li:hover {
+.subPagesList ul li:hover {
     background-color: #cfe2ff;
 
 }
@@ -64,6 +65,8 @@
 .subPagesList ul a {
     text-decoration: none;
     color: #000;
+    padding: 5px 20px;
+    display: block;
 }
 
 .subPagesList ul li.active {
@@ -73,4 +76,29 @@
 
 .subPagesList ul li.active a {
     color: #fff;
+}
+
+.subPagesList .inList {
+    height: 200px;
+    overflow: auto;
+    padding: 10px 0px;
+    cursor: initial;
+}
+
+span.pageSelectorSpan:before {
+    content: "Page: ";
+    font-weight: initial;
+    font-size: 12px;
+}
+
+span.pageSelectorSpan {
+    font-size: 13px;
+    font-weight: 500;
+    -webkit-user-select: none;
+    /* Safari */
+    -ms-user-select: none;
+    /* IE 10 and IE 11 */
+    user-select: none;
+    /* Standard syntax */
+    cursor: pointer;
 }
