--- a/src/Component/PreviewPanel/builderstyle.css
+++ b/src/Component/PreviewPanel/builderstyle.css
@@ -69,7 +69,14 @@ nav ul {
     display: flex;
 }
 
-
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 5px 0px;
+}
 
 /* Responsive for preview */
 div[data-prevpanel] {
